--- a/index.html
+++ b/index.html
@@ -215,8 +215,21 @@
             </div>
         </div>
     </div>
+    
+    <div class="player">
+        <div class="container">
+            <div class="player-elements">
+                <div class="player-controls">
+                    <i class="fa fa-step-backward"></i>
+                    <i class="fa fa-play fa-2x"></i>
+                    <i class="fa fa-step-forward"></i>
+                </div>
+            </div>
+        </div>
+    </div>
    
     <script src="assets/js/vendors/jquery-1.11.3.min.js"></script>
+    <script src="assets/js/vendors/bootstrap.min.js"></script>
     <script src="assets/js/vendors/bootstrap.min.js"></script>
 </body>
 </html>
