Add logo to header, logo files, album information, minor styling and logo source files

--- a/comments.html
+++ b/comments.html
@@ -8,14 +8,14 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/main.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Varela+Round" rel="stylesheet">
 </head>
 <body>
    
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">The Feedback Network</a>
+                <a class="navbar-brand" href="#"><img src="assets/img/logo-tfn-primary.svg" height="48px" alt="Logo" class="brand-img">The Feedback Network</a>
             </div>
             <div id="navbar">
                 <ul class="nav navbar-nav navbar-right">
@@ -53,6 +53,9 @@
             <div class="row">
                 <div class="col col-sm-2 col-xs-1">
                     <img src="assets/img/album-cover-placeholder.png" alt="Album Cover" class="album-cover">
+                    <p class="title">Say my name</p>
+                    <p class="time">(5:07)</p>
+                    <p class="artist">HaydenPa <span class="rep green">+950</span></p>
                 </div>
                 <div class="col col-sm-10 col-xs-11">
                     
