--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -9,7 +9,7 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/main.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700|Varela+Round" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">The Feedback Network</a>
+                <a class="navbar-brand" href="#"><img src="assets/img/logo-tfn-primary.svg" height="48px" alt="Logo" class="brand-img">The Feedback Network</a>
             </div>
         </div>
     </nav>
